# VibeCodingTracker

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  TODO.md  build.rs  parser.go  spec.md  vct.schema.json
.devcontainer/: Dockerfile
.github/: CONTRIBUTING.md  cliff.toml  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: build_image.yml  build_package.yml  build_release.yml  code_scan.yml  pre-commit-updater.yml  release_drafter.yml  test.yml
benches/: benchmarks.rs
cli/: install.js  package.json
cli/nodejs/: package.json
cli/nodejs/npm/darwin-arm64/: package.json
cli/nodejs/npm/darwin-x64/: package.json
cli/nodejs/npm/linux-arm64/: package.json
cli/nodejs/npm/linux-x64/: package.json
cli/python/: pyproject.toml
cli/python/src/vibe_coding_tracker/: __init__.py
docker/: Dockerfile
docs/: quota.md
examples/: README.md  analysis_result.json  analysis_result_claude_code.json  analysis_result_copilot.json  analysis_result_gemini.json  analysis_result_grok.json  analysis_result_oai.json  claude_code_log.json  claude_code_log_oai.json  claude_statusline_input.json  codex_session_rate_limits.jsonl  quota.md  test_conversation_claude_code.jsonl  test_conversation_copilot.json  test_conversation_copilot.jsonl  test_conversation_gemini.json  test_conversation_gemini.jsonl  test_conversation_oai.jsonl  wham_rate_limit_reset_credits_response.json
python_cli/: pyproject.toml
scripts/: install.ps1  install.sh  test.sh
src/: cli.rs  constants.rs  fetch.rs  lib.rs  main.rs  pricing.rs  summary_cache.rs  update.rs
src/analysis/: aggregator.rs  analyzer.rs  batch_analyzer.rs  claude_analyzer.rs  codex_analyzer.rs  common_state.rs  copilot_analyzer.rs  detector.rs  display.rs  gemini_analyzer.rs  mod.rs  summary.rs
src/cache/: file_cache.rs  mod.rs
src/cli/: Cargo.toml
src/cli/src/: cli.rs  main.rs
src/cli/tests/: cli.rs
src/config/: mod.rs
src/core/: Cargo.toml  build.rs
src/core/src/: constants.rs  lib.rs  summary_cache.rs
src/core/src/analysis/: aggregator.rs  mod.rs  summary.rs
src/core/src/cache/: mod.rs
src/core/src/config/: mod.rs
src/core/src/logging/: mod.rs
src/core/src/models/: aggregate.rs  analysis.rs  codex.rs  copilot.rs  filter.rs  provider.rs  quota.rs  usage.rs
src/core/src/pricing/: cache.rs  calculation.rs  matching.rs  mod.rs  tiers.rs
src/core/src/quota/: cache.rs  claude.rs  codex_session.rs  provider.rs  wham.rs
src/core/src/scan/: compact.rs  mod.rs
src/core/src/session/: claude.rs  detector.rs  diagnostics.rs  hermes.rs  opencode.rs  parser.rs  sqlite.rs  state.rs
src/core/src/update/: archive.rs  github.rs  mod.rs  version_cache.rs
src/core/src/usage/: aggregator.rs  mod.rs  pipeline.rs  priced.rs
src/core/src/utils/: file.rs  format.rs  time.rs  token_extractor.rs  token_merge.rs  usage_processor.rs
src/core/tests/: analysis.rs  cache.rs  config.rs  http_mock.rs  parser.rs  pricing.rs  quota.rs  usage.rs
src/display/: fetch.rs  mod.rs  quota.rs
src/display/analysis/: averages.rs  interactive.rs  mod.rs  table.rs  text.rs
src/display/common/: averages.rs  mod.rs  provider.rs  table.rs  traits.rs  tui.rs
src/display/usage/: averages.rs  interactive.rs  mod.rs  table.rs  text.rs
src/logging/: mod.rs
src/models/: analysis.rs  claude.rs  codex.rs  copilot.rs  filter.rs  gemini.rs  grok.rs  mod.rs  parse_result.rs  provider.rs  quota.rs  usage.rs
src/parser/: analyzer.rs  claude_analyzer.rs  codex_analyzer.rs  common_state.rs  copilot_analyzer.rs  gemini_analyzer.rs  mod.rs
src/pricing/: cache.rs  calculation.rs  cost.rs  matching.rs  mod.rs
src/quota/: cache.rs  claude.rs  codex_session.rs  copilot.rs  cursor.rs  fetch.rs  http.rs  mod.rs  provider.rs  refresh.rs  wham.rs
src/scan/: compact.rs  descriptor.rs  mod.rs
src/session/: claude.rs  codex.rs  copilot.rs  cursor.rs  detector.rs  diagnostics.rs  gemini.rs  grok.rs  hermes.rs  mod.rs  opencode.rs  parser.rs  state.rs
src/statusline/: mod.rs
src/test-support/: Cargo.toml
src/test-support/src/: lib.rs
src/tui/: Cargo.toml
src/tui/benches/: benchmarks.rs
src/tui/src/: lib.rs
src/tui/src/display/: mod.rs
src/tui/src/display/analysis/: averages.rs  interactive.rs  table.rs  text.rs
src/tui/src/display/common/: averages.rs  provider.rs  table.rs  tui.rs
src/tui/src/display/usage/: averages.rs  interactive.rs  mod.rs  table.rs  text.rs
src/update/: archive.rs  github.rs  installation.rs  mod.rs  platform.rs  startup_check.rs  version_cache.rs
src/usage/: aggregator.rs  calculator.rs  display.rs  mod.rs  pipeline.rs  priced.rs  summary.rs
src/utils/: directory.rs  file.rs  format.rs  git.rs  heap.rs  mod.rs  paths.rs  time.rs  token_extractor.rs  usage_processor.rs
tests/: README.md  analysis.rs  basic.rs  cache.rs  cli.rs  config.rs  http_mock.rs  integration_tests.rs  parser.rs  pricing.rs  quota.rs  statusline.rs  test_analysis_detector.rs  test_analysis_expected_output.rs  test_batch_analyzer.rs  test_cache_global.rs  test_codex_analyzer_edge_cases.rs  test_common_state.rs  test_detector.rs  test_display_helpers.rs  test_integration_analysis.rs  test_integration_usage.rs  test_lib.rs  test_main_integration.rs  test_models.rs  test_models_serialization.rs  test_pricing.rs  test_pricing_cache.rs  test_pricing_matching.rs  test_update.rs  test_update_version.rs  test_usage_calculator_edge_cases.rs  test_utils_directory.rs  test_utils_file.rs  test_utils_git.rs  test_utils_paths.rs  test_utils_time.rs  usage.rs
tests/common/: mod.rs
tests/fixtures/quota/: codex_session_rate_limits.jsonl  wham_usage_response.json
tests/fixtures/sessions/: claude_code.expected.json  claude_code.jsonl  codex.expected.json  codex.jsonl  copilot.expected.json  copilot.jsonl  gemini.expected.json  gemini.jsonl  grok.expected.json
tests/integrations/: README.md  analysis_tests.rs  cache_tests.rs  cli_tests.rs  mod.rs  parser_tests.rs  pricing_tests.rs  usage_tests.rs
(+5 files in other folders)
