[package]
name = "vibe_coding_tracker"
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
authors = ["Wei Lee <mai@mai0313.com>"]
description = "Vibe Coding Tracker - AI coding assistant token usage tracker for Claude Code, Codex, Copilot CLI, and Gemini CLI sessions"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Mai0313/VibeCodingTracker"
repository = "https://github.com/Mai0313/VibeCodingTracker"

[[bin]]
name = "vibe_coding_tracker"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.102"
bytecount = "0.6.9"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
comfy-table = "7.2.2"
crossterm = "0.29.0"
env_logger = "0.11.10"
flate2 = "1.1.9"
home = "0.5.11"
hostname = "0.4.2"
itoa = "1.0.18"
log = "0.4.29"
lru = "0.17.0"
memchr = "2.8.0"
mimalloc = { version = "0.1.50", default-features = false, optional = true }
once_cell = "1.21.4"
owo-colors = "4.3.0"
ratatui = "0.29.0"
rayon = "1.12.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
strsim = "0.11.1"
sysinfo = "0.36.1"
tar = "0.4.45"
walkdir = "2.5.0"
zip = "7.2.0"

[features]
mimalloc = ["dep:mimalloc"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.185"

[dev-dependencies]
assert_cmd = "2.2.1"
criterion = { version = "0.7.0", features = ["html_reports"] }
predicates = "3.1.4"
tempfile = "3.27.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"            # Link-time optimization
codegen-units = 1       # Better optimization at cost of compile time
strip = "symbols"       # Strip symbols for smaller binary
panic = "abort"         # Smaller binary, faster panic handling
overflow-checks = false # Disable overflow checks in release (faster)

# Profile for distribution builds with maximum optimization
[profile.dist]
inherits = "release"
lto = "fat"          # Full LTO for maximum performance
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"
