[workspace]
members = ["src/core", "src/tui", "src/cli", "src/test-support"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.95"
authors = ["Wei Lee <mai@mai0313.com>"]
license = "MIT"
homepage = "https://github.com/Mai0313/VibeCodingTracker"
repository = "https://github.com/Mai0313/VibeCodingTracker"

[workspace.dependencies]
# Internal crates (path deps, never published)
# Internal path deps carry a `version` so crates.io can resolve them when
# publishing; the release workflow stamps the real version across all members.
vct-core = { path = "src/core", version = "0.0.0" }
vct-tui = { path = "src/tui", version = "0.0.0" }
vct-test-support = { path = "src/test-support" }

# External dependencies (single source of truth for versions)
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = "1.0.102"
base64 = "0.22.1"
bytecount = "0.6.9"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
crossterm = "0.29.0"
flate2 = "1.1.9"
home = "0.5.11"
hostname = "0.4.2"
itoa = "1.0.18"
libc = "0.2.185"
log = "0.4.29"
lru = "0.18.0"
mimalloc = { version = "0.1.50", default-features = false }
owo-colors = "4.3.0"
percent-encoding = "2.3.2"
ratatui = "0.29.0"
rayon = "1.12.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
schemars = "1.0.4"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
sysinfo = "0.36.1"
tar = "0.4.46"
tempfile = "3.27.0"
toml_edit = { version = "0.23.7", features = ["serde"] }
walkdir = "2.5.0"
zip = "7.2.0"

# Dev dependencies
assert_cmd = "2.2.1"
criterion = { version = "0.7.0", features = ["html_reports"] }
httpmock = "0.8.3"
predicates = "3.1.4"
serial_test = "3.4.0"

[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"            # Link-time optimization
codegen-units = 1       # Better optimization at cost of compile time
strip = "symbols"       # Strip symbols for smaller binary
panic = "abort"         # Smaller binary, faster panic handling
overflow-checks = false # Disable overflow checks in release (faster)

# Profile for distribution builds with maximum optimization
[profile.dist]
inherits = "release"
lto = "fat"          # Full LTO for maximum performance
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"
