[project]
name = "vibe_coding_tracker"
version = "0.1.0"
description = "Vibe Coding Tracker - AI coding assistant telemetry/usage parser, aggregate JSONL events into CodeAnalysis results"
authors = [
    { name = "Wei Lee", email = "mai@mai0313.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
keywords = ["cli", "ai", "coding-assistant", "telemetry", "claude", "codex", "gemini", "usage-tracker", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Mai0313/VibeCodingTracker"
Repository = "https://github.com/Mai0313/VibeCodingTracker"
"Bug Tracker" = "https://github.com/Mai0313/VibeCodingTracker/issues"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

# `bin/` holds the native binary under both CLI names, populated by the release
# workflow. Everything under it is installed into the environment's script
# directory, so `vct` on PATH is the binary itself, not a Python entry point.
[tool.uv.build-backend]
data = { scripts = "bin" }
