[package]
name = "vct-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Command-line entry point for Vibe Coding Tracker (the `vct` binary)"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "vibe_coding_tracker"
path = "src/main.rs"

[dependencies]
vibe_coding_tracker = { workspace = true }
vct-tui = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
log = { workspace = true }
mimalloc = { workspace = true, optional = true }
owo-colors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
mimalloc = ["dep:mimalloc"]

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
vct-test-support = { workspace = true }
