[package]
name = "vibe_coding_tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Vibe Coding Tracker - AI coding assistant telemetry/usage parser, aggregate local session data into CodeAnalysis results"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytecount = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
home = { workspace = true }
hostname = { workspace = true }
itoa = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
percent-encoding = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
toml_edit = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
serial_test = { workspace = true }
vct-test-support = { workspace = true }
