[package]
name = "vct-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
vct-core = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
