[package]
name = "vct-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Terminal (ratatui / comfy-table) presentation layer for Vibe Coding Tracker"
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
vibe_coding_tracker = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
comfy-table = { workspace = true }
crossterm = { workspace = true }
log = { workspace = true }
owo-colors = { workspace = true }
ratatui = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
