[package]
name = "vct-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Terminal (ratatui / comfy-table) presentation layer for Vibe Coding Tracker"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
# The benchmark references fixtures at the repo root, so it is not
# self-contained inside a published `.crate`.
exclude = ["benches"]

[lib]
path = "src/lib.rs"

[dependencies]
vct-core = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
comfy-table = { workspace = true }
crossterm = { workspace = true }
log = { workspace = true }
owo-colors = { workspace = true }
ratatui = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
